# pynuspell

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml  setup.py  vcpkg.json
.github/workflows/: main.yml
src/pynuspell/: CMakeLists.txt  __init__.pyi  pynuspell.cpp
tests/: test_pynuspell.py
